--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donate Website</title>
+    <link rel="stylesheet" href="styles/donate.css">
 </head>
 <body>
-    
+    <header class="header">
+        <!-- <div class='header-function'> -->
+            <h1 class='header-title'>Let’s Help Those Who Are More In Need</h1>
+            <p class='header-description'>orem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.No duo populo animal noluisse, enim</p>
+            <button class="btn-primary">Donate Now</button>
+        <!-- </div> -->
+    </header>
 </body>
 </html>
