--- a/index.html
+++ b/index.html
@@ -9,11 +9,89 @@
 </head>
 <body>
     <header class="header">
-        <!-- <div class='header-function'> -->
             <h1 class='header-title'>Let’s Help Those Who Are More In Need</h1>
             <p class='header-description'>orem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.No duo populo animal noluisse, enim</p>
             <button class="btn-primary">Donate Now</button>
-        <!-- </div> -->
     </header>
+    <!-- Main Section -->
+    <main>
+        <section class='donate-date'>
+            <h1 class='title'>Donate Today</h1>
+            <p class='description'>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+            <div class="donate-tk">
+                <div class='amount'>
+                    <h3>100tk</h3>
+                </div>
+                <div class='amount active'>
+                    <h3>200tk</h3>
+                </div>
+                <div class='amount'>
+                    <h3>500tk</h3>
+                </div>
+                <div class='amount'>
+                    <h3>1000tk</h3>
+                </div>
+                <div class='amount'>
+                    <h3>500tk</h3>
+                </div>
+            </div>
+            <p class='donate-manual-tk'>Other Amount(Taka)</p>
+            <hr>
+            <button class="btn-primary">Download Now</button>
+        </section>
+        <!-- Section Donate Plan -->
+        <section class="donate-plan">
+            <h1 class='plan-title'>Our Donate Plan</h1>
+            <p class='plan-description'>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+            <div class='plans'>
+                <div class="food plan">
+                    <img src="assets/icons/food.png" alt="">
+                    <h3 class='title'>Food for a family</h3>
+                    <p class='description'>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                </div>
+                <div class="shelter plan">
+                    <img src="assets/icons/shelter.png" alt="">
+                    <h3>Shelter for a family</h3>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                </div>
+                <div class="education plan">
+                    <img src="assets/icons/icon5.svg" alt="" width='61' height='52'>
+                    <h3>ducation for a child</h3>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                </div>
+            </div>
+        </section>
+        <section class='depend'>
+            <div class='depend-your-donation'>
+                <div class='depend-text'>
+                    <h1 class='title'>Their lives depend on your donation</h1>
+                    <p class='description'>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+                    <p class='description'>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
+                    <button class="btn-primary">How to contribute?</button>
+                </div>
+                <img src="assets/images/donation3.jpg" alt="">
+            </div>
+        </section>
+        <section class="survive">
+            <div class='need-us-to-survive'>
+                <img src="assets/images/donation12.png" alt="">
+                <div class='survive-text'>
+                    <h1 class='title'>They need us to suvive</h1>
+                    <p class='description'>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+                    <p class='description'>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
+                    <button class="btn-primary">How to contribute?</button>
+            </div>
+        </section>
+        <section class='update'>
+            <div>
+                <h1 class="title">Get My Updates</h1>
+                <p class="description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+                <div class='contact'>
+                    <input type="email" name="" id="">
+                    <input type="submit" value="Subcribe">
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
