plan section update

--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
                 </div>
                 <div class="shelter plan">
                     <img src="assets/icons/shelter.png" alt="">
-                    <h3>Shelter for a family</h3>
-                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                    <h3 class='title'>Shelter for a family</h3>
+                    <p class='description'>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
                 </div>
                 <div class="education plan">
                     <img src="assets/icons/icon5.svg" alt="" width='61' height='52'>
-                    <h3>ducation for a child</h3>
-                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                    <h3 class='title'>ducation for a child</h3>
+                    <p class='description'>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
                 </div>
             </div>
         </section>
